--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "firebase": "^9.15.0",
+    "mui": "^0.0.1",
     "next": "^13.1.1",
+    "ethers": "^5.4.7",
+    "web3": "^1.5.3",
+
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -20,6 +24,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "@babel/runtime": "7.13.8",
+    "typescript": "4.1.3"
   }
 }
